# 21vek_test

./: pyproject.toml
tests/ui/: conftest.py  test_catalog_page.py  test_components.py  test_main_page.py
vek/model/components/: catalog_tab.py  footer.py  header.py  search_bar.py
vek/model/pages/: application.py  catalog_page.py  main_page.py  personal_data_page.py  search_results_page.py
